--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   max-width: 100%;
 }
+* {
+  padding: 0;
+  margin: 0;
+}
+
+@media only screen and (max-width: 396px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
+}
