--- a/src/components/compStyle.css
+++ b/src/components/compStyle.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .phone-icon {
   padding-right: 5%;
 }
@@ -7,4 +11,9 @@
   font-size: 12px;
   text-transform: lowercase;
   display: flex;
+}
+
+.carousel-wrapper {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
 }
