--- a/src/components/compStyle.css
+++ b/src/components/compStyle.css
@@ -14,6 +14,18 @@
 }
 
 .carousel-wrapper {
+  padding-top: 0.5%;
+  padding-bottom: 2%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
+}
+
+.middle-wrapper {
+  text-align: center;
+}
+
+.middle-text {
+  text-align: justify;
+  padding-left: 15%;
+  padding-right: 15%;
 }
