--- a/src/components/compStyle.css
+++ b/src/components/compStyle.css
@@ -14,7 +14,6 @@
 }
 
 .carousel-wrapper {
-  padding-top: 0.5%;
   padding-bottom: 2%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
@@ -28,4 +27,60 @@
   text-align: justify;
   padding-left: 15%;
   padding-right: 15%;
+}
+
+.service-wrapper {
+  padding-top: 18rem;
+  text-align: center;
+}
+
+.service-button {
+  display: flex;
+  justify-content: center;
+}
+
+.service-button-row-01 {
+  padding: 2%;
+}
+.service-button-row-02 {
+  padding: 2%;
+}
+
+.service-button-single {
+  padding-bottom: 5%;
+}
+
+@media only screen and (max-width: 250px) {
+  .footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+.footer-wrapper {
+  text-align: center;
+  border-top: 1px solid black;
+  list-style: none;
+  padding-left: 25%;
+  padding-top: 2%;
+}
+
+.footer-links {
+  padding-left: 15%;
+}
+
+#footer-desc {
+  font-size: 15px;
+  color: gray;
+}
+
+.contact-wrapper {
+  padding-top: 2%;
+  text-align: center;
+  background-color: lightgray;
+  padding-left: 25%;
+  padding-right: 25%;
+  padding-bottom: 2%;
 }
